<resources>
    <!--    App-->
    <string name="app_name">40 ХАДИСОВ</string>
    <string name="database_name">Database_ru</string>
    <string name="action_app_full_name">40 Хадисов Имама ан-Навави</string>
    <string name="action_app_link">https://play.google.com/store/apps/details?id=jmapps.hadith40</string>
    <string name="navigation_drawer_open">Открыть навигационный ящик</string>
    <string name="navigation_drawer_close">Закрыть навигационный ящик</string>
    <string name="action_search_chapter">Поиск по главам…</string>

    <!--    Favorites-->
    <string name="action_favorites">Избранное</string>
    <string name="action_is_favorites_empty">Добавьте избранные главы</string>
    <string name="action_favorite_added">Добавлено в избранное</string>
    <string name="action_favorite_removed">Удалено из избранного</string>

    <!--    Settings-->
    <string name="action_settings">Настройки</string>
    <string name="action_text_size">Размер текста</string>
    <string name="action_size_arabic">Арабский</string>
    <string name="action_size_translation">Перевод</string>
    <string name="action_text_show">Отображение текста</string>
    <string name="action_show_translation">Перевод</string>

    <!--    Database-->
    <string name="action_exception">Ошибка:</string>

    <!--    About us-->
    <string name="action_about_us">О нас</string>
    <string name="action_about_us_text">
        <b>JMApps</b> - серия бесплатных и безрекламных андроид-приложений для мусульман.\n\n

        Вы можете следить за обновлением старых и изданием новых приложений в наших соцсетях:\n\n

        ВКонтакте: www.vk.com/JMApps\n
        Telegram: t.me/JMApps\n
        Facebook: www.facebook.com/JMAppsM\n
        Instagram: www.instagram.com/dev_muslim\n\n

        По всем вопросам, предложениям и скритикой можете писать нам на почту:
        JMAppsMuslim@gmail.com или в Telegram: t.me/dev_muslim
    </string>

    <!--    Navigation View-->
    <string name="menu_tools">Настройки</string>
    <string name="menu_night_mode">Ночной режим</string>
    <string name="menu_additionally">Дополнительно</string>
    <string name="menu_about_us">О нас</string>
    <string name="menu_rate">Оценить</string>
    <string name="menu_share">Поделиться</string>

    <!--    Content Activity-->
    <string name="title_activity_scrolling">К главам</string>

    <!--    MediaPlayer-->
    <string name="player_loop_on">Повтор включён</string>
    <string name="player_loop_off">Повтор отключён</string>

    <!--    Apart content-->
    <string name="action_apart">По фразам</string>
</resources>